# flightless-galaxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  wasm-toolchain.toml
.cargo/: config.toml
.github/: config.toml
.github/workflows/: ci.yml  pages.yml
assets/: game-assets.assets  game.assets.ron  game.settings.ron  settings.ron
assets/levels/: testing.ldtk
assets/maps/: default.map.ron
crates/flightless-galaxy-derive/: Cargo.toml
crates/wasm-server-runner/: Cargo.toml  toolchain.toml
crates/wasm-server-runner/src/: main.rs  server.rs  wasm_bindgen.rs
src/: actions.rs  components.rs  error.rs  helpers.rs  inputs.rs  lib.rs  main.rs  prelude.rs  second.rs  settings.rs  state.rs  systems.rs  target.rs  testingaround.rs
src/helpers/: parse.rs  polar.rs  pos.rs
src/inputs/: game_inputs.rs  keyboard.rs  keymouse.rs  states.rs
wasm/: index.html  release-toolchain.toml  toolchain.toml
