[package]
name = "flightless-galaxy"
version = "0.2.0"
authors = ["Sycrosity"]
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#for loading assets with less boilerplate code
bevy_asset_loader = { version = "0.14", features = ["standard_dynamic_assets", "2d"] }
#for importing assets in the form of "ron" files
bevy_common_assets = { version = "0.4", features = ["ron"]}
#better audio
bevy_kira_audio = "0.13"
#handling inputs in a logical way
leafwing-input-manager = "0.7"
#for serialising data
serde = "1.0"
#serialising json files
serde_json = "1.0"
#for anything random related
rand = "0.8"
#allows running of code only on specific platforms
cfg-if = "1"
#for gamepad input/output
gilrs = "0.10"
#(if it gets wasm support in future) - for multiplayer networking and authentication
# bevy_renet = "0.0.6"
# renet = "0.0.10"
#for multiplayer networking and authentication
# bevy_renet = "0.0"
# renet = "0.0"
#a file format (Rusty Object Notation)
ron = "0.8"
#for time
instant = "0.1"
#for debug - disable for release
#chance back when next version is released - current version doesn't have needed features
# bevy-inspector-egui = "0.16"
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

#features all targets should have
[dependencies.bevy]
version = "0.9"
default-features = true
features = ["ktx2", "bevy_winit"]

#features only for targets that aren't wasm
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
# version = "0.9"
# default-features = true
# features = ["dynamic"]

[features]
dev = ["bevy/dynamic"]

#fix macos window weirdness - not a good fix but it should work
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[build-dependencies]
embed-resource = "1.8"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [features]
# dev = [
#     "bevy/dynamic",
# ]

[profile.wasm-release]
# Use release profile as default values
inherits = "release"
# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"
# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[profile.wasm-dev]
# Use release profile as default values
inherits = "dev"
# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"
# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
# lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
# codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]